Co-authored-by: rutzdenek@gmail.com <rutzdenek@gmail.com>

--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="author" content="Jakub Váňa, Tomáš Ungr, Zdeněk Rut">
+    <meta name="keywords" content="E-shop, Boty">
+    <meta name="description" content="E-shop na boty">
 </head>
 <body>
     <header>
