--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <title>HOMEPAGE</title>
-    <meta name="author" content="Zdeněk Rut, Jakub Váňa, TOmáš u">
+    <meta name="author" content="Zdeněk Rut, Jakub Váňa, Tomáš u">
     <meta name="description" content="Webová aplikace">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
