--- a/woman.html
+++ b/woman.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon.png">
-    <title>HOMEPAGE</title>
-    <meta name="author" content="Zdeněk Rut, Jakub Váňa, TOmáš u">
-    <meta name="description" content="Webová aplikace">
+    <title>WOMAN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <meta name="author" content="Jakub Váňa, Tomáš Ungr, Zdeněk Rut">
+    <meta name="keywords" content="E-shop, Boty">
+    <meta name="description" content="E-shop na boty">
 </head>
 <body>
-    <header>
+<header>
 
-<!-- navbar -->
+    <!-- navbar -->
 
-        <span class="link">
+    <span class="link">
             <a href="men.html" draggable="false">MEN</a>
             <a href="woman.html" draggable="false">WOMAN</a>
         </span>
-        <nav class="navigation">
-            <a href="homepage.html" draggable="false">SPHERE</a>
-        </nav>
-        <span class="about">
+    <nav class="navigation">
+        <a href="homepage.html" draggable="false">SPHERE</a>
+    </nav>
+    <span class="about">
             <a href="about.html" draggable="false">ABOUT</a>
             <a href="cart.php" draggable="false">CART</a>
         </span>
@@ -32,9 +33,10 @@
 
 <form action="search.php" method="get">
     <div class="search-bar">
-      <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?" onkeypress="return event.keyCode != 13;">
+        <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?"
+               onkeypress="return event.keyCode != 13;">
     </div>
-  </form>
+</form>
 
 <!-- hero -->
 
@@ -44,51 +46,51 @@
 
 <!-- produkty -->
 <section>
-  
-    <div class="shoe-container">
-      <a href="./dynamic.php?id=11" class="shoe" data-price="$100">
-          <img src="./images/dunk-blueconcord-1.webp">
-          <div class="name">DUNK LOW 'Concord'</div>
-      </a>
 
-      <a href="./dynamic.php?id=12" class="shoe" data-price="$140">
-          <img src="./images/jordan4-hyperviolet-1.webp">
-          <div class="name">AIR JORDAN 4 RETRO GS 'Hyper Violet'</div>
-      </a>
-      <a href="./dynamic.php?id=13" class="shoe" data-price="$400">
-          <img src="./images/jordan4-frozenmoments-1.webp">
-          <div class="name">AIR JORDAN 4 RETRO GS 'Frozen Moments'</div>
-      </a>
-      <a href="./dynamic.php?id=14" class="shoe" data-price="$600">
-          <img src="./images/bapesta-1.webp">
-          <div class="name">BAPESTA 'Black'</div>
-      </a>
-      <a href="./dynamic.php?id=15" class="shoe" data-price="$380">
-          <img src="./images/rickowens-converse-1.webp">
-          <div class="name">RICK OWENS x CONVERSE MID 'Black Cloud Cream'</div>
-      </a>
-      <a href="./dynamic.php?id=16" class="shoe" data-price="$350">
-          <img src="./images/supreme-airmax-1.webp">
-          <div class="name">SUPREME x AIR MAX 98 TL SP 'Black'</div>
-      </a>
-      <a href="./dynamic.php?id=17" class="shoe" data-price="$120">
-          <img src="./images/adidas-gazelle-1.webp">
-          <div class="name">Wmns Gazelle Indoor 'Collegiate Green Pink'</div>
-      </a>
-      <a href="./dynamic.php?id=18" class="shoe" data-price="$450">
-          <img src="./images/newballance-1.webp">
-          <div class="name">Joe Freshgoods x 1000 'When Things Were Pure Pack - Pink Mink'</div>
-      </a>
-      <a href="./dynamic.php?id=19" class="shoe" data-price="$200">
-          <img src="./images/jordan3-peach-1.webp">
-          <div class="name">Wmns Air Jordan 3 Retro 'Georgia Peach'</div>
-      </a>
-      <a href="./dynamic.php?id=20" class="shoe" data-price="$1500">
-          <img src="./images/jordan4-offwhite-1.webp">
-          <div class="name">Off-White x Wmns Air Jordan 4 Retro SP 'Sail'</div>
-      </a>
+    <div class="shoe-container">
+        <a href="./dynamic.php?id=11" class="shoe" data-price="$100">
+            <img src="./images/dunk-blueconcord-1.webp">
+            <div class="name">DUNK LOW 'Concord'</div>
+        </a>
+
+        <a href="./dynamic.php?id=12" class="shoe" data-price="$140">
+            <img src="./images/jordan4-hyperviolet-1.webp">
+            <div class="name">AIR JORDAN 4 RETRO GS 'Hyper Violet'</div>
+        </a>
+        <a href="./dynamic.php?id=13" class="shoe" data-price="$400">
+            <img src="./images/jordan4-frozenmoments-1.webp">
+            <div class="name">AIR JORDAN 4 RETRO GS 'Frozen Moments'</div>
+        </a>
+        <a href="./dynamic.php?id=14" class="shoe" data-price="$600">
+            <img src="./images/bapesta-1.webp">
+            <div class="name">BAPESTA 'Black'</div>
+        </a>
+        <a href="./dynamic.php?id=15" class="shoe" data-price="$380">
+            <img src="./images/rickowens-converse-1.webp">
+            <div class="name">RICK OWENS x CONVERSE MID 'Black Cloud Cream'</div>
+        </a>
+        <a href="./dynamic.php?id=16" class="shoe" data-price="$350">
+            <img src="./images/supreme-airmax-1.webp">
+            <div class="name">SUPREME x AIR MAX 98 TL SP 'Black'</div>
+        </a>
+        <a href="./dynamic.php?id=17" class="shoe" data-price="$120">
+            <img src="./images/adidas-gazelle-1.webp">
+            <div class="name">Wmns Gazelle Indoor 'Collegiate Green Pink'</div>
+        </a>
+        <a href="./dynamic.php?id=18" class="shoe" data-price="$450">
+            <img src="./images/newballance-1.webp">
+            <div class="name">Joe Freshgoods x 1000 'When Things Were Pure Pack - Pink Mink'</div>
+        </a>
+        <a href="./dynamic.php?id=19" class="shoe" data-price="$200">
+            <img src="./images/jordan3-peach-1.webp">
+            <div class="name">Wmns Air Jordan 3 Retro 'Georgia Peach'</div>
+        </a>
+        <a href="./dynamic.php?id=20" class="shoe" data-price="$1500">
+            <img src="./images/jordan4-offwhite-1.webp">
+            <div class="name">Off-White x Wmns Air Jordan 4 Retro SP 'Sail'</div>
+        </a>
     </div>
-  </section>
+</section>
 
 
 <footer id="footer">
@@ -104,7 +106,7 @@
     <div class="footer-section">
         <h4>CUSTOMER SUPPORT</h4>
         <p>Our client advisors are available Mon-Sat 6am - 4pm</p>
-        
+
     </div>
     <div class="footer-section">
         <h4>FREE SHIPPING, FREE RETURNS</h4>
@@ -112,11 +114,11 @@
     </div>
 
 </footer>
-    <footer>
-        <div class="copiright">
-            &copy; Copyright 2024 SPHERE
-    
-        </div>
-    </footer>
+<footer>
+    <div class="copiright">
+        &copy; Copyright 2024 SPHERE
 
-    <script src="./sricpt.js"></script>
+    </div>
+</footer>
+
+<script src="./sricpt.js"></script>
