--- a/men.html
+++ b/men.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon.png">
-    <title>HOMEPAGE</title>
-    <meta name="author" content="Zdeněk Rut, Jakub Váňa, TOmáš u">
-    <meta name="description" content="Webová aplikace">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <meta name="author" content="Jakub Váňa, Tomáš Ungr, Zdeněk Rut">
+    <meta name="keywords" content="E-shop, Boty">
+    <meta name="description" content="E-shop na boty">
+    <title>MEN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
+<header>
 
-<!-- navbar -->
+    <!-- navbar -->
 
-        <span class="link">
+    <span class="link">
             <a href="men.html" draggable="false">MEN</a>
             <a href="woman.html" draggable="false">WOMAN</a>
         </span>
-        <nav class="navigation">
-            <a href="homepage.html" draggable="false">SPHERE</a>
-        </nav>
-        <span class="about">
+    <nav class="navigation">
+        <a href="homepage.html" draggable="false">SPHERE</a>
+    </nav>
+    <span class="about">
             <a href="about.html" draggable="false">ABOUT</a>
             <a href="cart.php" draggable="false">CART</a>
         </span>
@@ -32,9 +33,10 @@
 
 <form action="search.php" method="get">
     <div class="search-bar">
-      <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?" onkeypress="return event.keyCode != 13;">
+        <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?"
+               onkeypress="return event.keyCode != 13;">
     </div>
-  </form>
+</form>
 
 <!-- hero -->
 
@@ -43,52 +45,52 @@
 </div>
 
 <!-- produkty -->
-  <section>
+<section>
 
-      <div class="shoe-container">
-          <a href="./dynamic.php?id=1" class="shoe" data-price="$120">
-              <img src="./images/jordan1-reversemocha-1.webp">
-              <div class="name">TRAVIS SCOTT x AIR JORDAN 1 LOW 'Reverse Mocha'</div>
-          </a>
+    <div class="shoe-container">
+        <a href="./dynamic.php?id=1" class="shoe" data-price="$120">
+            <img src="./images/jordan1-reversemocha-1.webp">
+            <div class="name">TRAVIS SCOTT x AIR JORDAN 1 LOW 'Reverse Mocha'</div>
+        </a>
 
-          <a href="./dynamic.php?id=2" class="shoe" data-price="$120">
-              <img src="./images/airmax-dn-2.webp">
-              <div class="name">AIR MAX DN 'Black'</div>
-          </a>
-          <a href="./dynamic.php?id=3" class="shoe" data-price="$120">
-              <img src="./images/jordan5-1.webp">
-              <div class="name">AIR JORDAN 5 RETRO SE 'Sail'</div>
-          </a>
-          <a href="./dynamic.php?id=4" class="shoe" data-price="$120">
-              <img src="./images/rickowens-1.webp">
-              <div class="name">RICK OWENS DRKSHDW HEXA HIGH 'Black Milk'</div>
-          </a>
-          <a href="./dynamic.php?id=5" class="shoe" data-price="$120">
-              <img src="./images/sbdunk-ebay-1.webp">
-              <div class="name">DUNK LOW SB 'Sandy Bodecker'</div>
-          </a>
-          <a href="./dynamic.php?id=6" class="shoe" data-price="$120">
-              <img src="./images/supreme-timberland-1.webp">
-              <div class="name">SUPREME x TIMBERLAND 'Whey'</div>
-          </a>
-          <a href="./dynamic.php?id=7" class="shoe" data-price="$120">
-              <img src="./images/adidas-walesbonner-1.webp">
-              <div class="name">WALES BONNER x SAMBA 'Silver Metallic'</div>
-          </a>
-          <a href="./dynamic.php?id=8" class="shoe" data-price="$120">
-              <img src="./images/sbdunk-huf-1.webp">
-              <div class="name">HUF x DUNK LOW SB 'New York'</div>
-          </a>
-          <a href="./dynamic.php?id=9" class="shoe" data-price="$120">
-              <img src="./images/salomon-xt-6-1.webp">
-              <div class="name">XT-6 SKYLINE 'Bleached Sand Dazzling Blue'</div>
-          </a>
-          <a href="./dynamic.php?id=10" class="shoe" data-price="$120">
-              <img src="./images/airmax-plus-1.webp">
-              <div class="name">AIR MAX PLUS'Triple Black'</div>
-          </a>
-      </div>
-  </section>
+        <a href="./dynamic.php?id=2" class="shoe" data-price="$120">
+            <img src="./images/airmax-dn-2.webp">
+            <div class="name">AIR MAX DN 'Black'</div>
+        </a>
+        <a href="./dynamic.php?id=3" class="shoe" data-price="$120">
+            <img src="./images/jordan5-1.webp">
+            <div class="name">AIR JORDAN 5 RETRO SE 'Sail'</div>
+        </a>
+        <a href="./dynamic.php?id=4" class="shoe" data-price="$120">
+            <img src="./images/rickowens-1.webp">
+            <div class="name">RICK OWENS DRKSHDW HEXA HIGH 'Black Milk'</div>
+        </a>
+        <a href="./dynamic.php?id=5" class="shoe" data-price="$120">
+            <img src="./images/sbdunk-ebay-1.webp">
+            <div class="name">DUNK LOW SB 'Sandy Bodecker'</div>
+        </a>
+        <a href="./dynamic.php?id=6" class="shoe" data-price="$120">
+            <img src="./images/supreme-timberland-1.webp">
+            <div class="name">SUPREME x TIMBERLAND 'Whey'</div>
+        </a>
+        <a href="./dynamic.php?id=7" class="shoe" data-price="$120">
+            <img src="./images/adidas-walesbonner-1.webp">
+            <div class="name">WALES BONNER x SAMBA 'Silver Metallic'</div>
+        </a>
+        <a href="./dynamic.php?id=8" class="shoe" data-price="$120">
+            <img src="./images/sbdunk-huf-1.webp">
+            <div class="name">HUF x DUNK LOW SB 'New York'</div>
+        </a>
+        <a href="./dynamic.php?id=9" class="shoe" data-price="$120">
+            <img src="./images/salomon-xt-6-1.webp">
+            <div class="name">XT-6 SKYLINE 'Bleached Sand Dazzling Blue'</div>
+        </a>
+        <a href="./dynamic.php?id=10" class="shoe" data-price="$120">
+            <img src="./images/airmax-plus-1.webp">
+            <div class="name">AIR MAX PLUS'Triple Black'</div>
+        </a>
+    </div>
+</section>
 
 
 <footer id="footer">
@@ -104,7 +106,7 @@
     <div class="footer-section">
         <h4>CUSTOMER SUPPORT</h4>
         <p>Our client advisors are available Mon-Sat 6am - 4pm</p>
-        
+
     </div>
     <div class="footer-section">
         <h4>FREE SHIPPING, FREE RETURNS</h4>
@@ -112,11 +114,11 @@
     </div>
 
 </footer>
-    <footer>
-        <div class="copiright">
-            &copy; Copyright 2024 SPHERE
-    
-        </div>
-    </footer>
+<footer>
+    <div class="copiright">
+        &copy; Copyright 2024 SPHERE
 
-    <script src="./sricpt.js"></script>
+    </div>
+</footer>
+
+<script src="./sricpt.js"></script>
