--- a/woman.html
+++ b/woman.html
@@ -45,52 +45,53 @@
 </div>
 
 <!-- produkty -->
-<section>
 
+<div>
     <div class="shoe-container">
         <a href="./dynamic.php?id=11" class="shoe" data-price="$100">
-            <img src="./images/dunk-blueconcord-1.webp">
+            <img src="./images/dunk-blueconcord-1.webp" alt="DUNK LOW 'Concord'">
             <div class="name">DUNK LOW 'Concord'</div>
         </a>
 
         <a href="./dynamic.php?id=12" class="shoe" data-price="$140">
-            <img src="./images/jordan4-hyperviolet-1.webp">
+            <img src="./images/jordan4-hyperviolet-1.webp" alt="AIR JORDAN 4 RETRO GS 'Hyper Violet'">
             <div class="name">AIR JORDAN 4 RETRO GS 'Hyper Violet'</div>
         </a>
         <a href="./dynamic.php?id=13" class="shoe" data-price="$400">
-            <img src="./images/jordan4-frozenmoments-1.webp">
+            <img src="./images/jordan4-frozenmoments-1.webp" alt="AIR JORDAN 4 RETRO GS 'Frozen Moments'">
             <div class="name">AIR JORDAN 4 RETRO GS 'Frozen Moments'</div>
         </a>
         <a href="./dynamic.php?id=14" class="shoe" data-price="$600">
-            <img src="./images/bapesta-1.webp">
+            <img src="./images/bapesta-1.webp" alt="BAPESTA 'Black'">
             <div class="name">BAPESTA 'Black'</div>
         </a>
         <a href="./dynamic.php?id=15" class="shoe" data-price="$380">
-            <img src="./images/rickowens-converse-1.webp">
+            <img src="./images/rickowens-converse-1.webp" alt="RICK OWENS x CONVERSE MID 'Black Cloud Cream'">
             <div class="name">RICK OWENS x CONVERSE MID 'Black Cloud Cream'</div>
         </a>
         <a href="./dynamic.php?id=16" class="shoe" data-price="$350">
-            <img src="./images/supreme-airmax-1.webp">
+            <img src="./images/supreme-airmax-1.webp" alt="SUPREME x AIR MAX 98 TL SP 'Black'">
             <div class="name">SUPREME x AIR MAX 98 TL SP 'Black'</div>
         </a>
         <a href="./dynamic.php?id=17" class="shoe" data-price="$120">
-            <img src="./images/adidas-gazelle-1.webp">
+            <img src="./images/adidas-gazelle-1.webp" alt="Wmns Gazelle Indoor 'Collegiate Green Pink'">
             <div class="name">Wmns Gazelle Indoor 'Collegiate Green Pink'</div>
         </a>
         <a href="./dynamic.php?id=18" class="shoe" data-price="$450">
-            <img src="./images/newballance-1.webp">
+            <img src="./images/newballance-1.webp" alt="Joe Freshgoods x 1000 'When Things Were Pure Pack - Pink Mink'">
             <div class="name">Joe Freshgoods x 1000 'When Things Were Pure Pack - Pink Mink'</div>
         </a>
         <a href="./dynamic.php?id=19" class="shoe" data-price="$200">
-            <img src="./images/jordan3-peach-1.webp">
+            <img src="./images/jordan3-peach-1.webp" alt="Wmns Air Jordan 3 Retro 'Georgia Peach'">
             <div class="name">Wmns Air Jordan 3 Retro 'Georgia Peach'</div>
         </a>
         <a href="./dynamic.php?id=20" class="shoe" data-price="$1500">
-            <img src="./images/jordan4-offwhite-1.webp">
+            <img src="./images//jordan4-offwhite-1.webp" alt="Off-White x Wmns Air Jordan 4 Retro SP 'Sail'">
             <div class="name">Off-White x Wmns Air Jordan 4 Retro SP 'Sail'</div>
         </a>
     </div>
-</section>
+</div>
+
 
 
 <footer id="footer">
