--- a/men.html
+++ b/men.html
@@ -45,52 +45,52 @@
 </div>
 
 <!-- produkty -->
-<section>
 
+<div>
     <div class="shoe-container">
-        <a href="./dynamic.php?id=1" class="shoe" data-price="$120">
-            <img src="./images/jordan1-reversemocha-1.webp">
+        <a href="./dynamic.php?id=1" class="shoe" data-price="$1200">
+            <img src="./images/jordan1-reversemocha-1.webp" alt="TRAVIS SCOTT x AIR JORDAN 1 LOW 'Reverse Mocha'">
             <div class="name">TRAVIS SCOTT x AIR JORDAN 1 LOW 'Reverse Mocha'</div>
         </a>
 
-        <a href="./dynamic.php?id=2" class="shoe" data-price="$120">
-            <img src="./images/airmax-dn-2.webp">
+        <a href="./dynamic.php?id=2" class="shoe" data-price="$160">
+            <img src="./images/airmax-dn-1.webp" alt="AIR MAX DN 'Black'">
             <div class="name">AIR MAX DN 'Black'</div>
         </a>
-        <a href="./dynamic.php?id=3" class="shoe" data-price="$120">
-            <img src="./images/jordan5-1.webp">
+        <a href="./dynamic.php?id=3" class="shoe" data-price="$220">
+            <img src="./images/jordan5-1.webp" alt="AIR JORDAN 5 RETRO SE 'Sail'">
             <div class="name">AIR JORDAN 5 RETRO SE 'Sail'</div>
         </a>
-        <a href="./dynamic.php?id=4" class="shoe" data-price="$120">
-            <img src="./images/rickowens-1.webp">
+        <a href="./dynamic.php?id=4" class="shoe" data-price="$700">
+            <img src="./images/rickowens-1.webp" alt="RICK OWENS DRKSHDW HEXA HIGH 'Black Milk'">
             <div class="name">RICK OWENS DRKSHDW HEXA HIGH 'Black Milk'</div>
         </a>
-        <a href="./dynamic.php?id=5" class="shoe" data-price="$120">
-            <img src="./images/sbdunk-ebay-1.webp">
+        <a href="./dynamic.php?id=5" class="shoe" data-price="$150">
+            <img src="./images/sbdunk-ebay-1.webp" alt="DUNK LOW SB 'Sandy Bodecker'">
             <div class="name">DUNK LOW SB 'Sandy Bodecker'</div>
         </a>
-        <a href="./dynamic.php?id=6" class="shoe" data-price="$120">
-            <img src="./images/supreme-timberland-1.webp">
+        <a href="./dynamic.php?id=6" class="shoe" data-price="$400">
+            <img src="./images/supreme-timberland-1.webp" alt="SUPREME x TIMBERLAND 'Whey'">
             <div class="name">SUPREME x TIMBERLAND 'Whey'</div>
         </a>
-        <a href="./dynamic.php?id=7" class="shoe" data-price="$120">
-            <img src="./images/adidas-walesbonner-1.webp">
+        <a href="./dynamic.php?id=7" class="shoe" data-price="$600">
+            <img src="./images/adidas-walesbonner-1.webp" alt="WALES BONNER x SAMBA 'Silver Metallic'">
             <div class="name">WALES BONNER x SAMBA 'Silver Metallic'</div>
         </a>
-        <a href="./dynamic.php?id=8" class="shoe" data-price="$120">
-            <img src="./images/sbdunk-huf-1.webp">
+        <a href="./dynamic.php?id=8" class="shoe" data-price="$300">
+            <img src="./images/sbdunk-huf-1.webp" alt="HUF x DUNK LOW SB 'New York'">
             <div class="name">HUF x DUNK LOW SB 'New York'</div>
         </a>
-        <a href="./dynamic.php?id=9" class="shoe" data-price="$120">
-            <img src="./images/salomon-xt-6-1.webp">
+        <a href="./dynamic.php?id=9" class="shoe" data-price="$140">
+            <img src="./images/salomon-xt-6-1.webp" alt="XT-6 SKYLINE 'Bleached Sand Dazzling Blue'">
             <div class="name">XT-6 SKYLINE 'Bleached Sand Dazzling Blue'</div>
         </a>
-        <a href="./dynamic.php?id=10" class="shoe" data-price="$120">
-            <img src="./images/airmax-plus-1.webp">
+        <a href="./dynamic.php?id=10" class="shoe" data-price="$150">
+            <img src="./images/airmax-plus-1.webp" alt="AIR MAX PLUS'Triple Black'">
             <div class="name">AIR MAX PLUS'Triple Black'</div>
         </a>
     </div>
-</section>
+</div>
 
 
 <footer id="footer">
