--- a/homepage.html
+++ b/homepage.html
@@ -18,25 +18,25 @@
 
         <span class="link">
             <a href="men.html" draggable="false">MEN</a>
-            <a href="woman.html" draggable="false">WOMAN</a>
+            <a href="woman.html" draggable="false">WOMEN</a>
         </span>
         <nav class="navigation">
-            <a href="index.html" draggable="false">SPHERE</a>
+            <a href="homepage.html" draggable="false">SPHERE</a>
         </nav>
         <span class="about">
-            <a href="about.html" draggable="false">ABOUT</a>
+            <a href="about.php" draggable="false">ABOUT</a>
             <a href="cart.php" draggable="false">CART</a>
         </span>
 </header>
 
 <!-- search -->
-
+<!--
 <form action="search.php" method="get">
     <div class="search-bar">
       <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?" onkeypress="return event.keyCode != 13;">
     </div>
   </form>
-
+-->
 <!-- hero -->
 
 <div class="hero-container">
@@ -99,7 +99,7 @@
 </div>
 
 <div class="gender-nadpis">
-<h1 class="hero-heading">WOMAN</h1>
+<h1 class="hero-heading">WOMEN</h1>
 </div>
 
 <!-- products-woman -->
