--- a/men.html
+++ b/men.html
@@ -18,26 +18,26 @@
 
     <span class="link">
             <a href="men.html" draggable="false">MEN</a>
-            <a href="woman.html" draggable="false">WOMAN</a>
+            <a href="woman.html" draggable="false">WOMEN</a>
         </span>
     <nav class="navigation">
         <a href="homepage.html" draggable="false">SPHERE</a>
     </nav>
     <span class="about">
-            <a href="about.html" draggable="false">ABOUT</a>
+            <a href="about.php" draggable="false">ABOUT</a>
             <a href="cart.php" draggable="false">CART</a>
         </span>
 </header>
 
 <!-- vyhledavani -->
-
+<!--
 <form action="search.php" method="get">
     <div class="search-bar">
         <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?"
                onkeypress="return event.keyCode != 13;">
     </div>
 </form>
-
+-->
 <!-- hero -->
 
 <div class="gender-banner">
