--- a/woman.html
+++ b/woman.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <title>WOMAN</title>
+    <title>WOMEN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <meta name="author" content="Jakub Váňa, Tomáš Ungr, Zdeněk Rut">
@@ -18,30 +18,30 @@
 
     <span class="link">
             <a href="men.html" draggable="false">MEN</a>
-            <a href="woman.html" draggable="false">WOMAN</a>
+            <a href="woman.html" draggable="false">WOMEN</a>
         </span>
     <nav class="navigation">
         <a href="homepage.html" draggable="false">SPHERE</a>
     </nav>
     <span class="about">
-            <a href="about.html" draggable="false">ABOUT</a>
+            <a href="about.php" draggable="false">ABOUT</a>
             <a href="cart.php" draggable="false">CART</a>
         </span>
 </header>
 
 <!-- vyhledavani -->
-
+<!--
 <form action="search.php" method="get">
     <div class="search-bar">
         <input type="text" name="search" placeholder="WHAT ARE YOU LOOKING FOR?"
                onkeypress="return event.keyCode != 13;">
     </div>
 </form>
-
+-->
 <!-- hero -->
 
 <div class="gender-banner">
-    <h1 class="hero-heading">WOMAN</h1>
+    <h1 class="hero-heading">WOMEN</h1>
 </div>
 
 <!-- produkty -->
